# canary-rs

./: Cargo.toml
migrations/: 20240511063513_init.sql
src/: main.rs
templates/: base.html
