[package]
name = "canary_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
futures-util = "0.3.30"
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["derive"] }
shuttle-shared-db = { version = "0.44.0", features = ["sqlx", "postgres"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
validator = { version = "0.18.1", features = ["derive"] }
axum = "0.7.4"
shuttle-axum = "0.44.0"
shuttle-runtime = "0.44.0"
tokio = "1.28.2"
